kubernetes/storage/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - gitops.storage.18b.haus
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
